Fixed CSS, Fixed title for slideshow, now magazine page is visible even if the user is not logged in

--- a/hello/static/css/selection.css
+++ b/hello/static/css/selection.css
@@ -8,7 +8,7 @@ body{
 }
 
 .post-list-title{
-    color: white;
+    color: white!important;
 }
 
 .magazine-list-container {
