--- a/hello/static/css/slideshow.css
+++ b/hello/static/css/slideshow.css
@@ -32,7 +32,7 @@ body{
 }
 
 .slideshow-title{
-    color:white;
+    color:white!important;
 }
 /*
 .slideshow-title{
